# events-validator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md
schema-repo-template/: README.md  setup-interactive.sh  setup-schema-repo.sh
schema-repo-template/.github/workflows/: sync-to-gcs-simple.yml  sync-to-gcs.yml
streamlit_ev/: .env.example  .gcloudignore  Dockerfile  README.md  hello.py  pyproject.toml  requirements.txt
streamlit_ev/app/: app.py  builder.py  explorer.py  export.py  home.py  repo.py  validation_report.py
streamlit_ev/app/helpers/: components.py  gcp.py  github.py  helpers.py  storage.py  updater.py
streamlit_ev/tests/: test_updater.py
terraform_backend/: bigquery.tf  cloudfunction.tf  gateway.tf  main.tf  outputs.tf  setup.tf  storage.tf  terraform.tfvars.example  variables.tf
terraform_backend/src/GA4 Recommended/: repo.json
terraform_backend/src/bq_schema/: bq_schema.json
terraform_backend/src/cf/: index.js
terraform_ev/: bigquery.tf  cloudfunction.tf  gateway.tf  main.tf  outputs.tf  setup.tf  storage.tf  streamlit_app.tf  streamlit_sa.tf  terraform.tfvars.example  variables.tf
terraform_ev/src/bq_schema/: bq_schema.json
terraform_ev/src/cf/: index.js
terraform_ev/src/templates/: gateway_config_template.yaml.tpl
terraform_ui/: main.tf  outputs.tf  setup.tf  streamlit_app.tf  streamlit_sa.tf  terraform.tfvars.example  variables.tf
validator_src/: .env.example  index.js  package-lock.json  package.json
validator_src/helpers/: cloudHelpers.js  loggingHelpers.js  validationHelpers.js
(+37 files in other folders)
