[project]
name = "streamlit-ev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-storage>=3.7.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.7",
    "streamlit>=1.52.2",
    "streamlit-option-menu>=0.4.0",
]
